tests/samples/invalid/cascading_type_inference_failure.pn
fn main()
{
	var a;
	var b = a;
}
